--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Employee Badge Matcher (Static)</title>
+    <title>vlookup test static</title>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 </head>
 <body>
-    <h2>Upload Employee Excel and Badge CSV</h2>
+    <h2>Upload Excel and Badge CSV</h2>
 
-    <label>Employee Excel File:</label>
+    <label>Excel File</label></label>
     <input type="file" id="excelFile" accept=".xlsx,.xls"><br><br>
 
-    <label>Badge CSV File:</label>
+    <label>CSV File:</label>
     <input type="file" id="csvFile" accept=".csv"><br><br>
 
     <button onclick="processFiles()">Generate Output</button>
@@ -92,3 +92,4 @@
     </script>
 </body>
 </html>
+
